# ai-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  agent.py  database.py  fix_remaining_urls.py  fix_urls.py  internships.db  internships_backup.db  main.py  pyproject.toml  requirements.txt  resume.txt  start_system.py  test_browser.py  test_email.py  web_dashboard.py
agents/analyzer/: resume_matcher.py
agents/orchestrator/: orchestrator_agent.py
agents/scout/: ats_monitor.py  github_monitor.py  instant_alert.py
docs/: AGENTS.md  API.md  ARCHITECTURE.md  SETUP.md
interfaces/api/: main.py
interfaces/web/: web_dashboard.py
scripts/: ai-agent-api.service  ai-agent-dashboard.service  crontab.txt  run-workflow.sh  telegram-bot.service
shared/: logging_config.py
shared/database/: database.py  view_database.py
shared/tools/: browser.py  database.py  telegram.py  telegram_bot.py
tests/: __init__.py  conftest.py  test_api.py  test_database.py  test_github_monitor.py  test_resume_matcher.py
tools/: ats_monitor.py  base.py  database.py  email.py  filesystem.py  github_monitor.py  instant_alert.py  websearch.py
