[project]
name = "ai-internship-agent"
version = "3.1.0"
description = "Autonomous AI agent for internship discovery and tracking"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Abel Prasad"}
]
keywords = ["internship", "job-search", "automation", "ai-agent"]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]
browser = [
    "playwright>=1.41.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
ai-agent = "start_system:main"
ai-agent-api = "interfaces.api.main:main"
ai-agent-dashboard = "interfaces.web.web_dashboard:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "shared*", "interfaces*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
